syntax = "proto3";

package primecruncher_v2;

option go_package = "./internal/proto";


service DispatcherService {
    rpc GetJob (GetJobRequest) returns (GetJobResponse);
}

service ConsolidatorService {
    rpc SubmitResult (SubmitResultRequest) returns (SubmitResultResponse);
    rpc RegisterWorker (RegisterWorkerRequest) returns (RegisterWorkerResponse);
    rpc DeregisterWorker (DeregisterWorkerRequest) returns (DeregisterWorkerResponse);
}

service FileServerService {
    rpc FetchSegment (FetchSegmentRequest) returns (stream FetchSegmentResponse);
}

message GetJobRequest {}

message GetJobResponse {
    string pathname = 1;
    int64 start = 2;
    int64 length = 3;
    bool done = 4; // Indicates no more jobs
}

message SubmitResultRequest {
    string pathname = 1;
    int64 start = 2;
    int64 length = 3;
    int64 prime_count = 4;
    int64 worker_id = 5; // Added to track worker submitting result
}

message SubmitResultResponse {}

message RegisterWorkerRequest {}

message RegisterWorkerResponse {
    int64 worker_id = 1; // Return assigned worker ID
}

message DeregisterWorkerRequest {
    int64 worker_id = 1; // Specify worker ID for deregistration
}

message DeregisterWorkerResponse {}

message FetchSegmentRequest {
    string pathname = 1;
    int64 start = 2;
    int64 length = 3;
    int64 chunk_size = 4;
}

message FetchSegmentResponse {
    bytes chunk = 1;
}